Fixed navbar and finally implemented gallery overflow effect

--- a/styles/darkness.css
+++ b/styles/darkness.css
@@ -388,7 +388,8 @@ a:not(.image):not(.gallery-item):hover {
         justify-content: center;
         align-content: flex-start;
         align-items: center;
-        gap: 4px;
+        gap: 2px 2px;
+        line-height: 0;
         margin-top: 2rem;
         margin-bottom: 2rem;
 }
@@ -397,7 +398,11 @@ a:not(.image):not(.gallery-item):hover {
         gap: 0;
 }
 
-.gallery a .item {
+.hide-overflow {
+        overflow: hidden;
+}
+
+.gallery-item .item {
         width: 100%;
         height: 100%;
 }
@@ -407,7 +412,7 @@ a:not(.image):not(.gallery-item):hover {
         flex-grow: 0;
         width: 1%;
         height: 1%;
-        transition: all 0.2s ease-in-out;
+        transition: all 700ms ease-in-out;
 }
 
 :root {
@@ -439,13 +444,12 @@ a:not(.image):not(.gallery-item):hover {
 }
 
 .item:hover {
-        transform: scale(1.005);
+        transform: scale(1.069);
 }
 
 @media all and (max-width: 900px) {
         .gallery {
                 width: 100%;
-                gap: 2px;
         }
         .no-gap {
                 gap: 0;
